--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<section>
+		<article class="sky">
+			<img src="img/sun.png" alt="sun" class="sun">
+			<img src="img/cloud1.png" alt="cloud1" class="cloud1">
+			<img src="img/cloud2.png" alt="cloud2" class="cloud2">
+		</article>
+	</section>
 </body>
 </html>
 
